20030723
 - (dtucker) [configure.ac] Back out change for bug #620.

20030719
 - (dtucker) [configure.ac] Bug #620: Define BROKEN_GETADDRINFO for
   Solaris/x86.  Patch from jrhett at isite.net.
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2003/07/14 12:36:37
     [sshd.c]
     remove undocumented -V option. would be only useful if openssh is used
     as ssh v1 server for ssh.com's ssh v2.
   - markus@cvs.openbsd.org 2003/07/16 10:34:53
     [ssh.c sshd.c]
     don't exit on multiple -v or -d; ok deraadt@
   - markus@cvs.openbsd.org 2003/07/16 10:36:28
     [sshtty.c]
     clear IUCLC in enter_raw_mode; from rob@pitman.co.za; ok deraadt@, fgs@
   - deraadt@cvs.openbsd.org 2003/07/18 01:54:25
     [scp.c]
     userid is unsigned, but well, force it anyways; andrushock@korovino.net
   - djm@cvs.openbsd.org 2003/07/19 00:45:53
     [sftp-int.c]
     fix sftp filename parsing for arguments with escaped quotes. bz #517;
     ok markus
   - djm@cvs.openbsd.org 2003/07/19 00:46:31
     [regress/sftp-cmds.sh]
     regress test for sftp arguments with escaped quotes; ok markus

20030714
 - (dtucker) [acconfig.h configure.ac port-aix.c] Older AIXes don't declare
   loginfailed at all, so assume 3-arg loginfailed if not declared.
 - (dtucker) [port-aix.h] Work around name collision on AIX for r_type by
   undef'ing it.
 - (dtucker) Bug #543: [configure.ac port-aix.c port-aix.h]
   Call setauthdb() before loginfailed(), which may load password registry-
   specific functions.  Based on patch by cawlfiel at us.ibm.com.
 - (dtucker) [port-aix.h] Fix prototypes.
 - (dtucker) OpenBSD CVS Sync
   - avsm@cvs.openbsd.org 2003/07/09 13:58:19
     [key.c]
     minor tweak: when generating the hex fingerprint, give strlcat the full
     bound to the buffer, and add a comment below explaining why the
     zero-termination is one less than the bound.  markus@ ok
   - markus@cvs.openbsd.org 2003/07/10 14:42:28
     [packet.c]